--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "http-server": "^14.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
